; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_locked.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_locked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_wc_locked(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i32*, i32** %6, align 8
  %11 = call i32 @svn_dirent_get_absolute(i8** %8, i8* %9, i32* %10)
  %12 = call i32 @SVN_ERR(i32 %11)
  %13 = load i32*, i32** %6, align 8
  %14 = load i32*, i32** %6, align 8
  %15 = call i32 @svn_wc_context_create(i32** %7, i32* null, i32* %13, i32* %14)
  %16 = call i32 @SVN_ERR(i32 %15)
  %17 = load i32*, i32** %4, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = load i8*, i8** %8, align 8
  %20 = load i32*, i32** %6, align 8
  %21 = call i32 @svn_wc_locked2(i32* null, i32* %17, i32* %18, i8* %19, i32* %20)
  %22 = call i32 @SVN_ERR(i32 %21)
  %23 = load i32*, i32** %7, align 8
  %24 = call i32 @svn_wc_context_destroy(i32* %23)
  %25 = call i32* @svn_error_trace(i32 %24)
  ret i32* %25
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_dirent_get_absolute(i8**, i8*, i32*) #1

declare dso_local i32 @svn_wc_context_create(i32**, i32*, i32*, i32*) #1

declare dso_local i32 @svn_wc_locked2(i32*, i32*, i32*, i8*, i32*) #1

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @svn_wc_context_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
